Update tags and description.

--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -1,5 +1,5 @@
 displayName=1 Tick Flick
 author=Million Pies
-description=Metronome with visual aid to help with 1-tick flicking.
-tags=1, tick, flick, prayer, metronome, visual, orb
+description=Visual tick bar and combo counter for 1-tick prayer flicking with the quick prayer orb
+tags=1, one, tick, flick, prayer, metronome, visual, quick, orb
 plugins=com.onetickflick.OneTickFlickPlugin
